# gen-linter-config

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  setup.py  t.py
ESLint/: Config_set_ESLint_for_googleJS.py  DSL_gpt_eslint.py  gen_eslint_config.py
ESLint/data/: DSL_ESLint_all.json
checkstyle/: Config_name_select_checkstyle_for_googlejava_one.py  DSL_gpt_checkstyle_gen.py  gen_checkstyle_config.py
checkstyle/data/: extract_checkstyle_rules_simple.py
checkstyle/data/checkstyle_rules_by_category/: blocks.json  design.json  indentation.json  miscellaneous.json  modifier.json  regexp.json  sizes.json  whitespace.json
others/: gen_lint_config_rough.py
src/gen_linter_config/: .gitignore  __init__.py  generate_linter_config.py  gpt_wrapper.py  util.py  utils.py
src/gen_linter_config/ESLint/: Config_set_ESLint_for_googleJS.py  DSL_gpt_eslint.py  DSL_gpt_google_JSstyle.py  __init__.py  eslint_lightweight.py  gen_eslint_config.py  gpt_instr_select_eslint_for_googleJS.py  util_java.py  util_js.py
src/gen_linter_config/ESLint/data/: eslint_rules_complete.json
src/gen_linter_config/checkstyle/: Config_name_select_checkstyle_for_googlejava_one.py  Config_set_checkstyle_for_googlejava_ours_o1.py  DSL_gpt_checkstyle_gen.py  DSL_gpt_google_java_style.py  __init__.py  checkstyle_lightweight.py  gen_checkstyle_config.py
src/gen_linter_config/checkstyle/data/: DSL_checkstyle_all.json  checkstyle_rules_complete.json  checkstyle_rules_simple.json
src/gen_linter_config/others/: __init__.py  gen_lint_config_rough.py
test_all/: Requirements_Increasing.md  commands
test_all/input/eslint_case/: asychronous_program.txt  coding_form.txt
test_all/output/checkstyle/: coding_format_out.json  complexity_control_out.json  comprehensive_quality_out.json
test_all/output/eslint/: asychronous_program_out.json  code_quality_out.json  coding_form_out.json
tests/: conftest.py  test_checkstyle.py  test_eslint.py
tests/fixtures/checkstyle/expected/: OO_out.json  coding_format_out.json  complexity_control_out.json  exception_handling_out.json
tests/fixtures/checkstyle/input/: OO.txt  coding_format.txt  complexity_control.txt  comprehensive_quality.txt  exception_handling.txt
(+10 files in other folders)
