[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-linter-config"              # 命令行工具名，可带连字符
version = "1.0.0"
description = "GenerateLinterConfig - 代码检查规则生成工具"
readme = "README.md"
authors = [{ name = "crowdedplus", email = "522025330089@smail.nju.edu.cn" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "litellm~=1.81.3",
    "dotenv~=0.9.9",
    "python-dotenv~=1.2.1",
    "pip~=25.2",
    "attrs~=25.4.0",
    "distro~=1.9.0",
    "retry~=0.9.2",
    "PySocks~=1.7.1",
    "pillow~=11.1.0",
    "Jinja2~=3.1.6",
    "openai~=2.15.0",
    "tiktoken~=0.12.0",
    "requests~=2.33.0",
    "beautifulsoup4~=4.14.2",
    "setuptools~=80.9.0",
    "httpx~=0.28.1",
    "pytest~=9.0.3"
]

[project.scripts]
gen-linter-config = "gen_linter_config.generate_linter_config:main"

[project.urls]
Homepage = "https://github.com/crowdedplus/gen-linter-cAonfig"
Repository = "https://github.com/crowdedplus/gen-linter-config.git"
Issues = "https://github.com/crowdedplus/gen-linter-config/issues"

[tool.setuptools.packages.find]
where = ["src"]