[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-linter-config"              # 命令行工具名，可带连字符
version = "1.0.8"
description = "GenerateLinterConfig - 代码检查规则生成工具"
readme = "README.md"
authors = [{ name = "crowdedplus", email = "522025330089@smail.nju.edu.cn" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "litellm~=1.81.3",
    "openai~=2.15.0",
    "tiktoken~=0.12.0",
    "requests~=2.33.0",
    "beautifulsoup4~=4.14.2",
    "httpx~=0.28.1",
    "retry~=0.9.2",
    "pytest~=9.0.3"
]

[project.scripts]
gen-linter-config = "gen_linter_config.generate_linter_config:main"

[project.urls]
Homepage = "https://github.com/crowdedplus/gen-linter-config"
Repository = "https://github.com/crowdedplus/gen-linter-config.git"
Issues = "https://github.com/crowdedplus/gen-linter-config/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gen_linter_config" = ["**/*.json"]